// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LoginForm/> should not submit form with one credential missing 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="loginForm-root"
    testID="loginForm-root"
  >
    <Text
      heading={true}
    >
      Login
    </Text>
    <ScrollView
      horizontal={false}
      keyboardShouldPersistTaps="handled"
    >
      <View
        marginB-4={true}
      >
        <TouchableOpacity
          accessibilityLabel="loginForm-usernameEmail-root"
          activeOpacity={1}
          paddingB-8={true}
          paddingL-12={true}
          paddingR-12={true}
          paddingT-8={true}
          style={
            Array [
              undefined,
              Object {
                "backgroundColor": "#FAFAF1",
                "borderRadius": 8,
              },
            ]
          }
          testID="loginForm-usernameEmail-root"
        >
          <TextInput
            PatchProps={
              Object {
                "accessibilityLabel": "loginForm-usernameEmail-root",
                "testID": "loginForm-usernameEmail-root",
              }
            }
            accessibilityLabel="loginForm-usernameEmail-input"
            allowFontScaling={true}
            autoCapitalize="none"
            color="#FAFAF1"
            enableErrors={false}
            floatOnFocus={true}
            floatingPlaceholder={true}
            floatingPlaceholderColor={
              Object {
                "default": "#FAFAF1",
                "error": "#FAFAF1",
                "focus": "#FAFAF1",
              }
            }
            floatingPlaceholderStyle={Object {}}
            hideUnderline={true}
            infoText={true}
            keyboardType="email-address"
            placeholder="Username or email"
            rejectResponderTermination={true}
            style={
              Array [
                undefined,
                Object {
                  "marginBottom": 4,
                  "marginTop": -4,
                },
              ]
            }
            testID="loginForm-usernameEmail-input"
            underlineColorAndroid="transparent"
            value="username"
          />
        </TouchableOpacity>
        <Text
          error={false}
          style={
            Object {
              "fontSize": 12,
              "marginTop": 2,
              "paddingLeft": 12,
            }
          }
          success={false}
        >
           
        </Text>
      </View>
      <View
        marginB-4={true}
      >
        <TouchableOpacity
          accessibilityLabel="loginForm-password-root"
          activeOpacity={1}
          paddingB-8={true}
          paddingL-12={true}
          paddingR-12={true}
          paddingT-8={true}
          style={
            Array [
              undefined,
              Object {
                "backgroundColor": "#FAFAF1",
                "borderRadius": 8,
              },
            ]
          }
          testID="loginForm-password-root"
        >
          <TextInput
            PatchProps={
              Object {
                "accessibilityLabel": "loginForm-password-root",
                "testID": "loginForm-password-root",
              }
            }
            accessibilityLabel="loginForm-password-input"
            allowFontScaling={true}
            autoCapitalize="none"
            color="#FAFAF1"
            enableErrors={false}
            floatOnFocus={true}
            floatingPlaceholder={true}
            floatingPlaceholderColor={
              Object {
                "default": "#FAFAF1",
                "error": "#FAFAF1",
                "focus": "#FAFAF1",
              }
            }
            floatingPlaceholderStyle={Object {}}
            hideUnderline={true}
            infoText={true}
            placeholder="Enter password"
            rejectResponderTermination={true}
            secureTextEntry={true}
            style={
              Array [
                Object {
                  "marginBottom": 48,
                },
                Object {
                  "marginBottom": 4,
                  "marginTop": -4,
                },
              ]
            }
            testID="loginForm-password-input"
            underlineColorAndroid="transparent"
            value=""
          />
        </TouchableOpacity>
        <Text
          error={false}
          style={
            Object {
              "fontSize": 12,
              "marginTop": 2,
              "paddingLeft": 12,
            }
          }
          success={false}
        >
           
        </Text>
      </View>
      <TouchableOpacity
        accessibilityLabel="loginForm-submitButton"
        label="Login"
        testID="loginForm-submitButton"
      />
    </ScrollView>
  </View>
</View>
`;

exports[`<LoginForm/> should submit form with credentials 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="loginForm-root"
    testID="loginForm-root"
  >
    <Text
      heading={true}
    >
      Login
    </Text>
    <ScrollView
      horizontal={false}
      keyboardShouldPersistTaps="handled"
    >
      <View
        marginB-4={true}
      >
        <TouchableOpacity
          accessibilityLabel="loginForm-usernameEmail-root"
          activeOpacity={1}
          paddingB-8={true}
          paddingL-12={true}
          paddingR-12={true}
          paddingT-8={true}
          style={
            Array [
              undefined,
              Object {
                "backgroundColor": "#FAFAF1",
                "borderRadius": 8,
              },
            ]
          }
          testID="loginForm-usernameEmail-root"
        >
          <TextInput
            PatchProps={
              Object {
                "accessibilityLabel": "loginForm-usernameEmail-root",
                "testID": "loginForm-usernameEmail-root",
              }
            }
            accessibilityLabel="loginForm-usernameEmail-input"
            allowFontScaling={true}
            autoCapitalize="none"
            color="#FAFAF1"
            enableErrors={false}
            floatOnFocus={true}
            floatingPlaceholder={true}
            floatingPlaceholderColor={
              Object {
                "default": "#FAFAF1",
                "error": "#FAFAF1",
                "focus": "#FAFAF1",
              }
            }
            floatingPlaceholderStyle={Object {}}
            hideUnderline={true}
            infoText={true}
            keyboardType="email-address"
            placeholder="Username or email"
            rejectResponderTermination={true}
            style={
              Array [
                undefined,
                Object {
                  "marginBottom": 4,
                  "marginTop": -4,
                },
              ]
            }
            testID="loginForm-usernameEmail-input"
            underlineColorAndroid="transparent"
            value="username"
          />
        </TouchableOpacity>
        <Text
          error={false}
          style={
            Object {
              "fontSize": 12,
              "marginTop": 2,
              "paddingLeft": 12,
            }
          }
          success={false}
        >
           
        </Text>
      </View>
      <View
        marginB-4={true}
      >
        <TouchableOpacity
          accessibilityLabel="loginForm-password-root"
          activeOpacity={1}
          paddingB-8={true}
          paddingL-12={true}
          paddingR-12={true}
          paddingT-8={true}
          style={
            Array [
              undefined,
              Object {
                "backgroundColor": "#FAFAF1",
                "borderRadius": 8,
              },
            ]
          }
          testID="loginForm-password-root"
        >
          <TextInput
            PatchProps={
              Object {
                "accessibilityLabel": "loginForm-password-root",
                "testID": "loginForm-password-root",
              }
            }
            accessibilityLabel="loginForm-password-input"
            allowFontScaling={true}
            autoCapitalize="none"
            color="#FAFAF1"
            enableErrors={false}
            floatOnFocus={true}
            floatingPlaceholder={true}
            floatingPlaceholderColor={
              Object {
                "default": "#FAFAF1",
                "error": "#FAFAF1",
                "focus": "#FAFAF1",
              }
            }
            floatingPlaceholderStyle={Object {}}
            hideUnderline={true}
            infoText={true}
            placeholder="Enter password"
            rejectResponderTermination={true}
            secureTextEntry={true}
            style={
              Array [
                Object {
                  "marginBottom": 48,
                },
                Object {
                  "marginBottom": 4,
                  "marginTop": -4,
                },
              ]
            }
            testID="loginForm-password-input"
            underlineColorAndroid="transparent"
            value="password"
          />
        </TouchableOpacity>
        <Text
          error={false}
          style={
            Object {
              "fontSize": 12,
              "marginTop": 2,
              "paddingLeft": 12,
            }
          }
          success={false}
        >
           
        </Text>
      </View>
      <TouchableOpacity
        accessibilityLabel="loginForm-submitButton"
        label="Login"
        testID="loginForm-submitButton"
      />
    </ScrollView>
  </View>
</View>
`;
